opam-version: "1.2"
maintainer: "yutopp@gmail.com"
authors: ["yutopp"]
homepage: "https://github.com/yutopp/rill_ir"
bug-reports: "https://github.com/yutopp/rill_ir/issues"
dev-repo: "https://github.com/yutopp/rill_ir.git"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name]
]

depends: [
  "jbuilder" {build}
]